Add /healthz
